Updates to the presentation including an image of the 64 emojis.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section id="methodology" class="slide level1">
 <h1>Methodology</h1>
 <ul>
-<li class="fragment">Train on 1.2 billion tweet corpus and 64 commonly used emojis <img src="/Users/kennylino/Documents/EM%20LCT%20Courses/UoM%20Courses/Applied%20Machine%20Learning/emojiprediction/emoji_overview.png" alt="Image of the 64 Emojis" /></li>
+<li class="fragment">Train on 1.2 billion tweet corpus and 64 commonly used emojis <img src="./emoji_overview.png" alt="Image of the 64 Emojis" /></li>
 </ul>
 </section>
 <section id="conclusions" class="slide level1">
